<resources>
    <string name="app_name">Sistema de Gerenciamento</string>
    <string name="app_name_tela_config">Configuração da Conta</string>
    <string name="app_name_tela_consultar_servico">Consultar Serviços</string>
    <string name="app_name_tela_consultar_comentario">Consultar Comentários</string>
    <string name="app_name_tela_recuperar_senha">Recuperar Senha</string>
    <string name="app_name_tela_informação_servico">Informações do Serviço</string>
    <string name="app_name_tela_listar_cliente">Clientes</string>
    <string name="buscar">Buscar</string>
    <string name="sistema_de_gerenciamento_de_ordem_de_servi_o">Sistema de Gerenciamento de Ordem de Serviço</string>
    <string name="imagem_de_abertura">Imagem de abertura</string>
    <string name="senha_antiga">Senha Antiga</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="confirmar">Confirmar</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="usuario">Usuário</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="editar_conta">Editar Conta</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="entrar_1">ENTRAR</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="menu">Menu</string>
    <string name="configuracoes_da_conta">Configurações da Conta</string>
    <string name="consultar_servicos">Consultar Serviços</string>
    <string name="deslogar">Deslogar</string>
    <string name="solicitar_orcamento1">SOLICITAR ORÇAMENTO</string>
    <string name="nome_do_servico">Nome do Serviço</string>
    <string name="solicitar_orcamento">Solicitar Orçamento</string>
    <string name="excluir">Excluir</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="status">Status</string>
    <string name="cancelar">Cancelar</string>
    <string name="preco">Preço</string>
    <string name="comentario">Comentário</string>
    <string name="data_de_finalizacao">Data de Finalização</string>
    <string name="data_de_abertura">Data de abertura</string>
    <string name="nome_de_servico">Nome de Serviço</string>
    <string name="descricao">Descrição</string>
    <string name="aceitar">Aceitar</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="e_mail">E-mail</string>
    <string name="qual_o_seu_e_mail">Qual o seu e-mail?</string>
    <string name="nome_do_servico1">Nome do serviço:</string>
    <string name="textview">TextView</string>
    <string name="descricao_">Descrição:</string>
    <string name="status_">Status:</string>
    <string name="adicionar_comentario">Adicionar comentário</string>
    <string name="ver_comentarios">Ver comentários</string>
    <string name="comentario_">Comentário:</string>
    <string name="data_de_envio">Data de envio:</string>
    <string name="listar_clientes">Listar Clientes</string>
    <string name="cliente_">Cliente:</string>
    <string name="nome_">Nome:</string>
    <string name="e_mail_">E-mail:</string>
    <string name="telefone_">Telefone:</string>
    <string name="menu_de_administrador">MENU DE ADMIN</string>
    <string name="status_conta">Status da conta</string>
    <string name="status_conta_">Status da conta:</string>
    <string name="atualizar">Atualizar</string>
    <string name="preco_">Preço:</string>
    <string name="aberta">ABERTA</string>
    <string name="cancelada">CANCELADA</string>
    <string name="finalizada">FINALIZADA</string>
    <string name="todos">TODOS</string>
    <string name="bloqueado">BLOQUEADO</string>
    <string name="desbloqueado">DESBLOQUEADO</string>
    <string name="chat">Chat</string>
    <string name="enviar">Enviar</string>
    <string name="mensagem">Digite a mensagem</string>
    <string name="total_dos_precos">Total dos preços:</string>
    <string name="voltar">Voltar</string>

</resources>