<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="br.com.fatec.projetoOrdensDeServicos.telaCliente.TelaConfigConta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/usuario"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/azul_ab"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="200dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:text="@string/editar_conta"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btnAlterarSenha"
            android:layout_width="200dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:text="@string/alterar_senha"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/txtExcluir"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/excluir_conta"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#F43636"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>