<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaAdmin.TelaMenuAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/btnSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/deslogar"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/users_exit_icon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/menu_de_administrador"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/azul_ab"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnListarCliente"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/listar_clientes"
            android:textAllCaps="false"
            android:textSize="19.5sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnConsultarServico"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/consultar_servicos"
            android:textAllCaps="false"
            android:textSize="19.5sp"
            app:cornerRadius="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>