<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context="br.com.fatec.projetoOrdensDeServicos.TelaLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/entrar_1"
            android:textAlignment="center"
            android:textColor="@color/azul_ab"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/users_2_icon"
                android:drawablePadding="20dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/very_basic_lock_icon"
                android:drawablePadding="25dp"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="200dp"
            android:layout_height="67dp"
            android:layout_marginTop="20dp"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="200dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:text="@string/cadastre_se"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/txtRecuperarSenha"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/esqueceu_a_senha"
            android:textAlignment="center"
            android:textColor="@color/azul_ab"
            android:textSize="16sp"
            android:textStyle="italic" />

        <ProgressBar
            android:id="@+id/pBCarregar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>